fixed obscure mobile layout issue

--- a/resources/editor/editor.css
+++ b/resources/editor/editor.css
@@ -124,6 +124,7 @@
 
 #options {
     line-height: 20px;
+    white-space: nowrap;
 }
 
 #pages .divider {
